test: 채팅 메시지 조회 기능 테스트 userName 검증 추가